--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Deals/DealsCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Deals/DealsCell.xib
@@ -19,7 +19,77 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6y-Mc-Bvw">
                         <rect key="frame" x="0.0" y="0.0" width="319" height="174"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="picture1" translatesAutoresizingMaskIntoConstraints="NO" id="KuE-X1-IfB">
+                                <rect key="frame" x="0.0" y="0.0" width="319" height="174"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="319" id="4Fl-qr-9MC"/>
+                                    <constraint firstAttribute="height" constant="174" id="VNj-dk-2iy"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="18"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yl-gE-bHs">
+                                <rect key="frame" x="135" y="18" width="88" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="TuX-AW-aJl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Summer Sale Now" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5d-L5-dGo">
+                                <rect key="frame" x="135" y="72" width="145" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="mVg-kA-Eec"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9MF-b0-UTt" userLabel="Shop Now">
+                                <rect key="frame" x="135" y="114" width="98" height="35"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP NOW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lby-jR-Qbd">
+                                        <rect key="frame" x="14" y="9" width="69" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="gXu-bf-JPc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.89803921568627454" green="0.62352941176470589" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Lby-jR-Qbd" firstAttribute="leading" secondItem="9MF-b0-UTt" secondAttribute="leading" constant="14" id="Edh-4h-IuQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Lby-jR-Qbd" secondAttribute="trailing" constant="17" id="KZQ-Xy-too"/>
+                                    <constraint firstItem="Lby-jR-Qbd" firstAttribute="top" secondItem="9MF-b0-UTt" secondAttribute="top" constant="9" id="nnb-8S-x5S"/>
+                                    <constraint firstAttribute="height" constant="35" id="vhL-Xt-38H"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="7"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="9MF-b0-UTt" secondAttribute="bottom" constant="25" id="05t-Tb-TYD"/>
+                            <constraint firstAttribute="bottom" secondItem="KuE-X1-IfB" secondAttribute="bottom" id="3G0-Zr-dwq"/>
+                            <constraint firstItem="9MF-b0-UTt" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" constant="135" id="4UB-pm-mdE"/>
+                            <constraint firstItem="2yl-gE-bHs" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" constant="135" id="5Kt-2u-8p9"/>
+                            <constraint firstAttribute="trailing" secondItem="KuE-X1-IfB" secondAttribute="trailing" id="5Wr-Sj-W78"/>
+                            <constraint firstItem="KuE-X1-IfB" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" id="IUg-Sn-Eei"/>
+                            <constraint firstItem="KuE-X1-IfB" firstAttribute="top" secondItem="N6y-Mc-Bvw" secondAttribute="top" id="dnl-u4-Kj5"/>
+                            <constraint firstItem="2yl-gE-bHs" firstAttribute="top" secondItem="N6y-Mc-Bvw" secondAttribute="top" constant="18" id="go2-l9-yH3"/>
+                            <constraint firstItem="t5d-L5-dGo" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" constant="135" id="vRG-aL-57q"/>
+                            <constraint firstItem="t5d-L5-dGo" firstAttribute="top" secondItem="2yl-gE-bHs" secondAttribute="bottom" constant="10" id="zcd-rl-cXH"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <integer key="value" value="18"/>
@@ -36,10 +106,11 @@
                 <constraint firstItem="N6y-Mc-Bvw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="suB-YM-IjG"/>
             </constraints>
             <size key="customSize" width="319" height="174"/>
-            <point key="canvasLocation" x="12" y="-20"/>
+            <point key="canvasLocation" x="11.538461538461538" y="-20.616113744075829"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="picture1" width="316" height="174"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
